# knots

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  FILTERS.md  LICENSE  README.md  example-pre-commit-config.yaml  filter-example-exclude.json  filter-example-include.json
.github/workflows/: build.yml
examples/: simple.c
hooks/: PRE_COMMIT_FRAMEWORK.md  QUICKSTART.md  README.md  install-hook.sh  pre-commit  pre-commit-warning-only  pre-commit-wrapper.sh  test-complexity-wrapper.sh
knots/: Cargo.toml
knots-test-complexity/: Cargo.toml  README.md
knots-test-complexity/examples/: README.md  sensor.c  test_sensor_boundaries.c  test_timer_bad.c  test_timer_good  test_timer_good.c
knots-test-complexity/src/: analyzer.rs  boundary.rs  main.rs  reporter.rs
knots/examples/: complex.c  nested.c
knots/src/: lib.rs  main.rs
src/: complexity.rs  main.rs
test-complexity/: Cargo.toml  IMPLEMENTATION.md  README.md  TODO.md
test-complexity/examples/: README.md  test_sensor_boundaries  test_timer_bad  timer.c
test-complexity/src/: analyzer.rs  boundary.rs  main.rs
