[workspace]
members = [
    "knots",
    "knots-test-complexity",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Brandon Arrendondo <brandon@arrendondo.dev>"]
repository = "https://github.com/brandon-arrendondo/knots"

[workspace.dependencies]
tree-sitter = "0.22"
tree-sitter-c = "0.21"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
regex = "1.10"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
