[package]
name = "knots-test-complexity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Test quality analyzer - validates unit tests have sufficient complexity and boundary coverage"

[[bin]]
name = "knots-test-complexity"
path = "src/main.rs"

[dependencies]
knots = { path = "../knots" }
tree-sitter.workspace = true
tree-sitter-c.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
regex.workspace = true
