[package]
name = "knots"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cyclomatic and cognitive complexity analysis for C code"

[[bin]]
name = "knots"
path = "src/main.rs"

[lib]
name = "knots"
path = "src/lib.rs"

[dependencies]
tree-sitter.workspace = true
tree-sitter-c.workspace = true
anyhow.workspace = true
clap.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
