[package]
name = "test-complexity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Test quality analyzer - validates unit tests have sufficient complexity and boundary coverage"

[[bin]]
name = "test-complexity"
path = "src/main.rs"

[dependencies]
knots = { path = "../knots" }
tree-sitter.workspace = true
tree-sitter-c.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
regex.workspace = true
